UF-10142: Fix sonar issues